--- a/Templating HTML/README
+++ b/Templating HTML/README
@@ -1,1 +1,43 @@
+Реализуйте обработчики для вывода списка пользователей /users и конкретного пользователя /users/.
+Список пользователей содержится в переменной users. Каждый пользователь представлен словарём у
+которого есть числовой ключ id.
 
+Пример
+# Гипотетический пример показывающий структуру
+users = [
+  {
+    'id': 4,
+    'first_name': 'John',
+    'last_name': 'Doe',
+    'email': 'johndoe@gmail.com',
+  },
+  # другие пользователи
+]
+Если пользователь с таким идентификатором не существует, сайт должен вернуть ошибку 404
+(страница с HTTP кодом 404) и текстом Page not found.
+
+src/templates/users/index.html
+Реализуйте вывод списка пользователей (/users) со ссылкой на просмотр каждого из них.
+
+Список пользователей выведите в табличном виде с полями: id и first_name.
+first_name сделайте ссылкой на страницу конкретного пользователя.
+
+Пример
+<table>
+  <tr>
+    ...
+    <td>4</td>
+    <td>
+      <a href="/users/4">John</a>
+    </td>
+    ...
+  </tr>
+</table>
+templates/users/show.html
+
+
+Реализуйте вывод всех полей пользователя по маршуту /users/.
+Вывод организуйте как вам удобно (проще всего использовать таблицу).
+
+Подсказки
+Использование цикла for в шаблонах.
